<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="files"
        android:title="@string/pref_saveFile" >
        <EditTextPreference
            android:defaultValue="@string/pref_pathDefault"
            android:key="path"
            android:summary="Where your photos are stored on the SD card"
            android:title="@string/pref_path" >
        </EditTextPreference>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_dateEntries"
            android:entryValues="@array/pref_dateValues"
            android:key="date"
            android:persistent="true"
            android:shouldDisableView="false"
            android:summary="@string/pref_dateDesc"
            android:title="@string/pref_date" />

        <!-- <CheckBoxPreference android:summary="Try saving photos on Internal Storage if no removable storage media (SD card) is availible" android:key="internalFallback" android:title="Revert to Internal Storage"></CheckBoxPreference> -->
    </PreferenceCategory>
    <PreferenceCategory
        android:key="mail"
        android:title="@string/pref_mail" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="mailEnable"
            android:title="@string/pref_mailEnable" />

        <PreferenceScreen
            android:dependency="mailEnable"
            android:key="mailPreferences"
            android:shouldDisableView="true"
            android:title="@string/pref_mailPreferences" >
            <PreferenceCategory
                android:key="mailAccount"
                android:title="@string/pref_mailAccount" >
                <EditTextPreference
                    android:inputType="textEmailAddress"
                    android:key="mailFrom"
                    android:singleLine="true"
                    android:title="@string/pref_mailFrom" />
                <EditTextPreference
                    android:inputType="textNoSuggestions"
                    android:key="mailHost"
                    android:singleLine="true"
                    android:title="@string/pref_mailHost" />
                <EditTextPreference
                    android:inputType="number"
                    android:key="mailPort"
                    android:singleLine="true"
                    android:title="@string/pref_mailPort" />
                <EditTextPreference
                    android:inputType="textNoSuggestions"
                    android:key="mailUser"
                    android:singleLine="true"
                    android:title="@string/pref_mailUser" />
                <EditTextPreference
                    android:inputType="textPassword"
                    android:key="mailPassword"
                    android:singleLine="true"
                    android:title="@string/pref_mailPassword" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:enabled="false"
                    android:key="mailSsl"
                    android:title="@string/pref_mailSsl" />
            </PreferenceCategory>
            <PreferenceCategory
                android:key="mailContent"
                android:title="@string/pref_mailContent" >
                <EditTextPreference
                    android:inputType="textEmailAddress"
                    android:key="mailTo"
                    android:singleLine="true"
                    android:title="@string/pref_mailTo" />
                <EditTextPreference
                    android:inputType="textEmailSubject"
                    android:key="mailSubject"
                    android:singleLine="true"
                    android:title="@string/pref_mailSubject" />
                <EditTextPreference
                    android:key="mailBody"
                    android:title="@string/pref_mailBody" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="ftp"
        android:title="@string/pref_ftp" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="ftpEnable"
            android:title="@string/pref_ftpEnable" />

        <PreferenceScreen
            android:dependency="ftpEnable"
            android:key="ftpPreferences"
            android:shouldDisableView="true"
            android:title="@string/pref_ftpPreferences" >
            <PreferenceCategory
                android:key="ftpAccount"
                android:title="@string/pref_ftpAccount" >
                <EditTextPreference
                    android:inputType="textNoSuggestions"
                    android:key="ftpHost"
                    android:singleLine="true"
                    android:title="@string/pref_ftpHost" />
                <EditTextPreference
                    android:inputType="number"
                    android:key="ftpPort"
                    android:singleLine="true"
                    android:title="@string/pref_ftpPort" />
                <EditTextPreference
                    android:inputType="textNoSuggestions"
                    android:key="ftpDirectory"
                    android:singleLine="true"
                    android:title="@string/pref_ftpDirectory" />
                <EditTextPreference
                    android:inputType="textNoSuggestions"
                    android:key="ftpUser"
                    android:singleLine="true"
                    android:title="@string/pref_ftpUser" />
                <EditTextPreference
                    android:inputType="textPassword"
                    android:key="ftpPassword"
                    android:singleLine="true"
                    android:title="@string/pref_ftpPassword" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:enabled="false"
                    android:key="ftpSsl"
                    android:title="@string/pref_ftpSsl" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="uploading"
        android:title="@string/pref_upload" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enableShare"
            android:title="@string/pref_enableShare" />
    </PreferenceCategory>

    <!-- <PreferenceCategory android:key="compression" android:title="@string/pref_compression"></PreferenceCategory> -->

</PreferenceScreen>